--- a/assignment_4/SSD/configs/vgg_ssd300_voc0712.yaml
+++ b/assignment_4/SSD/configs/vgg_ssd300_voc0712.yaml
@@ -2,6 +2,7 @@ MODEL:
     NUM_CLASSES: 21
 INPUT:
     IMAGE_SIZE: [300, 300]
+    PIXEL_STD: [0.003921569, 0.003921569, 0.003921569] # Set pixel std to 1/255 as VGG is pre-trained on images in range (roughly) [-127.5, 127.5]
 DATASETS:
     TRAIN: ("voc_2007_trainval", "voc_2012_trainval")
     TEST: ("voc_2007_test", )
